<resources>

    <string name="app_name">Sensor Data</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Postavke</string>

    <string name="title_activity_temperature">Temperatura</string>
    <string name="title_activity_humidity">Vlažnost zraka</string>
    <string name="title_activity_luminosity">Osvjetljenje</string>
    <string name="title_activity_presence">Prisutnost u prostoriji</string>
    <string name="title_activity_door">Vrata</string>
    <string name="title_activity_settings">Postavke</string>

    <string name="temp_naziv">Temperatura</string>
    <string name="vlaznost_naziv">Vlažnost</string>
    <string name="osvjetljenost_naziv">Osvjetljenje:</string>
    <string name="prisutstvo_naziv">Prostorija:</string>
    <string name="vrata_naziv">Vrata:</string>

    <string name="button_refresh">Osvježi</string>
    <string name="button_set">Postavi</string>

    <string name="bad">loše </string>
    <string name="very_bad">vrlo loše </string>
    <string name="medium">srednje </string>
    <string name="good">dobro </string>

    <string name="door_open">Trenuci kad su vrata bila otvorena:</string>




</resources>