<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity"
    android:id="@+id/activity_main">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2196f3"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:text="TRENUTNE VRIJEDNOSTI"
                android:textSize="18sp"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:layout_span="4"
                android:gravity="center"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/imageView"
                android:src="@drawable/termometar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temp_naziv"
                android:id="@+id/textViewTemp" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:id="@+id/current_temp_value"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/imageView2"
                android:src="@drawable/kap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/vlaznost_naziv"
                android:id="@+id/textViewVlaga" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:id="@+id/current_humidity_value"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/imageView3"
                android:src="@drawable/lampica" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/osvjetljenost_naziv"
                android:id="@+id/textViewOsvjetljenje" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:id="@+id/current_luminosity_value"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/imageView4"
                android:src="@drawable/ljudi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/prisutstvo_naziv"
                android:id="@+id/textViewPrisutnost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:id="@+id/presence_value"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/imageView5"
                android:src="@drawable/vrata" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/vrata_naziv"
                android:id="@+id/textViewVrata"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:id="@+id/door_value"
                android:layout_column="3" />

        </TableRow>

    </TableLayout>


    <Button
        android:layout_height="40dp"
        android:layout_width="173dp"
        android:text="@string/button_refresh"
        android:id="@+id/refresh_button"
        android:layout_gravity="center_horizontal"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarMain"
        android:indeterminate="false"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="STARIJA MJERENJA"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="#2196f3"
        android:id="@+id/textView9"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Za starija mjerenja odaberite jedan od gornjih senzora i odaberite period koji vas zanima. "
        android:id="@+id/textView4" />

</LinearLayout>
