<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity"
    android:id="@+id/layout_main2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="TRENUTNE VRIJEDNOSTI"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="#2196f3"
        android:id="@+id/textView0"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#ffa7a7a7"
        android:id="@+id/tableLayout2"
        android:layout_below="@+id/textView0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:background="#fff9f9f9">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/imageView"
                android:src="@drawable/termometar" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:id="@+id/imageView1"
                android:src="@drawable/vlaznost" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:background="#fff9f9f9">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/temp_naziv"
                android:id="@+id/textViewTemp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/vlaznost_naziv"
                android:id="@+id/textViewVlaga" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:background="#fff9f9f9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:textColor="#2196f3"
                android:textStyle="bold"
                android:textSize="28sp"
                android:id="@+id/current_temp_value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:textColor="#2196f3"
                android:textStyle="bold"
                android:textSize="28sp"
                android:id="@+id/current_humidity_value" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tableLayout"
        android:layout_below="@+id/tableLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffbbbbbb">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:background="#fff9f9f9"
            android:id="@+id/tableRowLum">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:id="@+id/imageView3"
                android:src="@drawable/lampica" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/osvjetljenost_naziv"
                android:textColor="#666666"
                android:id="@+id/textViewOsvjetljenje" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_column="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:textColor="#666666"
                android:id="@+id/current_luminosity_value"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:background="#fff9f9f9"
            android:id="@+id/tableRowPres">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:id="@+id/imageView4"
                android:src="@drawable/soba" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/prisutstvo_naziv"
                android:textColor="#666666"
                android:id="@+id/textViewPrisutnost"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:textColor="#666666"
                android:id="@+id/presence_value"
                android:layout_column="3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:background="#fff9f9f9"
            android:id="@+id/tableRowDoor">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/imageView5"
                android:src="@drawable/vrata" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/vrata_naziv"
                android:textColor="#666666"
                android:id="@+id/textViewVrata"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="-----"
                android:textColor="#666666"
                android:id="@+id/door_value"
                android:layout_column="3" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout3"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffa7a7a7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="#fff9f9f9"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <Button
                android:layout_height="40dp"
                android:layout_width="173dp"
                android:text="@string/button_refresh"
                android:gravity="center_horizontal"
                android:id="@+id/refresh_button"/>

        </TableRow>

    </TableLayout>



    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarMain"
        android:indeterminate="false"
        android:background="#fff9f9f9"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="STARIJA MJERENJA"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:background="#2196f3"
        android:id="@+id/textView9"
        android:gravity="center"
        android:layout_below="@+id/tableLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Za starija mjerenja odaberite neki od gornjih senzora, te period koji vas zanima. "
        android:id="@+id/textView4"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
